--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,7 @@
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "echarts": "^5.3.0",
-    "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-echarts": "^6.0.2",
     "vue-router": "^3.2.0",
@@ -24,7 +24,6 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/composition-api": "^1.4.6",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.3",
