--- a/server/src/main/resources/application-dev.yaml
+++ b/server/src/main/resources/application-dev.yaml
@@ -20,9 +20,9 @@ spring:
       test-on-borrow: false
       test-on-return: false
   redis:
-    host: 192.168.159.130
+    host: 192.168.1.250
     port: 6379
-    password:
+    password: Zgx123..!
     jedis:
       pool:
         max-active: 8 # 连接池最大连接数（使用负值表示没有限制）
@@ -31,9 +31,3 @@ spring:
         min-idle: 0 # 连接池中的最小空闲连接
 myapp:
   imgPath: 'D:/developTools/Apache/apache-tomcat/apache-tomcat-8.5.30_idea/webapps/file'
-  redis:
-    default:
-      expire: 7200
-  user:
-    default:
-      password: 123456cc
