--- a/server/src/main/resources/application-dev.yaml
+++ b/server/src/main/resources/application-dev.yaml
@@ -29,5 +29,6 @@ spring:
         max-idle: 8 # 连接池中的最大空闲连接
         max-wait: 30 # 连接池最大阻塞等待时间（使用负值表示没有限制）
         min-idle: 0 # 连接池中的最小空闲连接
+        time-between-eviction-runs: 1000
 myapp:
   imgPath: 'D:/developTools/Apache/apache-tomcat/apache-tomcat-8.5.30_idea/webapps/file'
