--- a/web/.env
+++ b/web/.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
 VUE_APP_API_BASE_URL=http://localhost:8085/api
+VUE_APP_FILE_URL=http://localhost/file/
 VUE_APP_PUBLIC_PATH='/'
 VUE_APP_PORT=8085
