--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -15,6 +15,7 @@ spring:
       max-file-size: 20MB
 
 mybatis:
+  mapper-locations: classpath:mapper/*.xml
   configuration:
     map-underscore-to-camel-case: true
 
