--- a/server/src/main/resources/application-pro.yaml
+++ b/server/src/main/resources/application-pro.yaml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://localhost:3306/web?allowMultiQueries=true&serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://localhost:3306/web?allowMultiQueries=true&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password:
@@ -20,7 +20,7 @@ spring:
       test-on-borrow: false
       test-on-return: false
   redis:
-    host: 192.168.159.130
+    host: 127.0.0.1
     port: 6379
     password:
     jedis:
