--- a/server/src/main/resources/application-dev.yaml
+++ b/server/src/main/resources/application-dev.yaml
@@ -37,5 +37,5 @@ application:
       path: D:\developTools\xampp\htdocs\file
   wechat:
     miniprogram:
-      appId: wxd449ec34061a16d8
-      appSecret: 7ff7b2e4d7060e7a8c35aecb9402ee75
+      appId:
+      appSecret:
