--- a/web/.env.production
+++ b/web/.env.production
@@ -1,5 +1,5 @@
 NODE_ENV=production
-VUE_APP_API_BASE_URL=http://1.15.38.182:8880/api
-VUE_APP_FILE_URL=http://localhost/file/
-VUE_APP_PUBLIC_PATH='/'
+VUE_APP_API_BASE_URL=http://www.shanghaiyly.com:8080/foodServer/
+VUE_APP_FILE_URL=http://www.shanghaiyly.com:8080/file/
+VUE_APP_PUBLIC_PATH='/food'
 VUE_APP_PORT=8082
